--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
 
   <!-- Import polyfills -->
-  <script type="module" src="./js/polyfills.js"></script>
+  <!-- <script type="module" src="./js/polyfills.js"></script> -->
   <!-- scipts -->
   <script type="module" src="./js/og_ulr.js"></script>
   <script type="module" src="./js/network_toggle_button.js"></script>
